Adds tests for headerImage global rule

--- a/tests/Facebook/InstantArticles/Transformer/GlobalHtml/global.html
+++ b/tests/Facebook/InstantArticles/Transformer/GlobalHtml/global.html
@@ -14,6 +14,9 @@
                 <img src="http://domain.com/image-body.png"/>
                 <span class="caption">The caption for image.</span>
             </div>
+            <div class="hero-image">
+                <img src="http://domain.com/header-image-body.png"/>
+            </div>
             <div class="author">
                 By: <a href="http://facebook.com/author" title="Journalist">Author Name</a>
                 <span>Some author description</span>
